--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
     <main class="container">
 
         <h1>Análise Alfa.bet</h1>
-        <p style="font-size: 1.2em; margin-top: -1em; margin-bottom: 2em;">Relatório de Performance: 13 de Março a 16 de Setembro (e Outubro)</p>
+        <p style="font-size: 1.2em; margin-top: -1em; margin-bottom: 2em;">Relatório de Performance: Março a Outubro</p>
 
         <section class="kpi-grid grid-container">
             <div class="card kpi-card">
