--- a/index.html
+++ b/index.html
@@ -96,14 +96,14 @@
                 <!-- Logo Clever -->
                 <div>
                     <img class="h-10 w-auto" 
-                         src="Logo-Clever.webp" 
+                         src="logo-clever-quadrado.webp" 
                          alt="Logo Clever Advertising"
                          onerror="this.src='https://placehold.co/150x40/2d3748/FACC15?text=Clever+Ads'">
                 </div>
                 <!-- Logo Alfa.bet -->
                 <div>
                     <img class="h-10 w-auto" 
-                         src="log-alfa.jpeg" 
+                         src="logo-alfa-quadrado" 
                          alt="Logo Alfa.bet"
                          onerror="this.src='https://placehold.co/150x40/2d3748/FACC15?text=Alfa.bet'">
                 </div>
