--- a/index.html
+++ b/index.html
@@ -92,20 +92,28 @@
     <!-- Header -->
     <header class="bg-brand-card shadow-lg sticky top-0 z-50">
         <nav class="container mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-center items-center h-20 space-x-12">
+            <div class="flex justify-center items-center h-24 space-x-6"> <!-- Altura do header aumentada para h-24 -->
                 <!-- Logo Clever -->
                 <div>
-                    <img class="h-10 w-auto" 
+                    <img class="h-16 w-auto" <!-- Tamanho aumentado para h-16 -->
                          src="logo-clever-quadrado.webp" 
                          alt="Logo Clever Advertising"
-                         onerror="this.src='https://placehold.co/150x40/2d3748/FACC15?text=Clever+Ads'">
+                         onerror="this.src='https://placehold.co/150x64/2d3748/FACC15?text=Clever+Ads'">
                 </div>
+                
+                <!-- Símbolo de Parceria (Ícone de Link) -->
+                <div>
+                    <svg class="h-8 w-8 text-brand-accent" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M13.19 8.688a4.5 4.5 0 011.242 7.244l-4.5 4.5a4.5 4.5 0 01-6.364-6.364l1.757-1.757m13.35-.622l1.757-1.757a4.5 4.5 0 00-6.364-6.364l-4.5 4.5a4.5 4.5 0 001.242 7.244" />
+                    </svg>
+                </div>
+
                 <!-- Logo Alfa.bet -->
                 <div>
-                    <img class="h-10 w-auto" 
+                    <img class="h-16 w-auto" <!-- Tamanho aumentado para h-16 -->
                          src="logo-alfa-quadrado" 
                          alt="Logo Alfa.bet"
-                         onerror="this.src='https://placehold.co/150x40/2d3748/FACC15?text=Alfa.bet'">
+                         onerror="this.src='https://placehold.co/150x64/2d3748/FACC15?text=Alfa.bet'">
                 </div>
             </div>
         </nav>
