--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             <div class="flex justify-center items-center h-24 space-x-6"> <!-- Altura do header aumentada para h-24 -->
                 <!-- Logo Clever -->
                 <div>
-                    <img class="h-16 w-auto" <!-- Tamanho aumentado para h-16 -->
+                    <img class="h-16 w-auto" <!-- Corrigido: Removido comentário daqui -->
                          src="logo-clever-quadrado.webp" 
                          alt="Logo Clever Advertising"
                          onerror="this.src='https://placehold.co/150x64/2d3748/FACC15?text=Clever+Ads'">
@@ -110,7 +110,7 @@
 
                 <!-- Logo Alfa.bet -->
                 <div>
-                    <img class="h-16 w-auto" <!-- Tamanho aumentado para h-16 -->
+                    <img class="h-16 w-auto" <!-- Corrigido: Removido comentário daqui -->
                          src="logo-alfa-quadrado" 
                          alt="Logo Alfa.bet"
                          onerror="this.src='https://placehold.co/150x64/2d3748/FACC15?text=Alfa.bet'">
