--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 </head>
 <body class="bg-brand-dark text-brand-text leading-relaxed">
 
-    <!-- Header --><header class="bg-brand-card shadow-lg sticky top-0 z-50">
+    <!-- Header --><header class="bg-brand-dark border-b border-brand-card sticky top-0 z-50">
         <nav class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-center items-center h-24 space-x-6"> 
                 <!-- Logo Clever --><div>
