--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="flex justify-center items-center h-24 space-x-6"> 
                 <!-- Logo Clever --><div>
                     <img class="h-20 w-20 object-contain" 
-                         src="logo-clever-quadrado.webp" 
+                         src="Logo-Clever.webp" 
                          alt="Logo Clever Advertising"
                          onerror="this.src='https://placehold.co/80x80/2d3748/FACC15?text=Clever+Ads'">
                 </div>
