--- a/index.html
+++ b/index.html
@@ -374,10 +374,10 @@
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Novembro : Desempenho e Início do Bloqueio</h3>
                     <p class="text-brand-text-soft">
-                        A nova estratégia de rentabilidade agressiva continuou a dar frutos em termos de custo por aquisição: o **CPP consolidou-se em 22,63€**, atingindo o ponto de rentabilidade para a conta, com CTR e Taxa de Conversão elevadas.
+                        A nova estratégia de rentabilidade agressiva continuou a dar frutos em termos de custo por aquisição: o CPP consolidou-se em 22,63€, atingindo o ponto de rentabilidade para a conta, com CTR e Taxa de Conversão elevadas.
                     </p>
                     <p class="text-brand-text-soft mt-3 border-l-4 border-yellow-500 pl-3">
-                        Contudo, a 18 de Novembro, o volume de impressões e cliques caiu drasticamente devido a uma **restrição de *geo-blocking***. O Google detetou que o bot do sistema não conseguia aceder ao website do cliente, resultando em anúncios bloqueados na maioria dos geos. Este fator limitou a capacidade de escalar os resultados positivos.
+                        Contudo, a 18 de Novembro, o volume de impressões e cliques caiu drasticamente devido a uma restrição de geo-blocking. O Google detetou que o bot do sistema não conseguia aceder ao website do cliente, resultando em anúncios bloqueados na maioria dos geos. Este fator limitou a capacidade de escalar os resultados positivos.
                     </p>
                 </div>
 
@@ -385,10 +385,10 @@
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-red-500 ring-4 ring-red-300"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-red-400">Dezembro (1ª Quinzena) : Bloqueio Total de Anúncios</h3>
                     <p class="text-brand-text-soft">
-                        A primeira quinzena de Dezembro reflete o impacto total da restrição de *geo-blocking*.
+                        A primeira quinzena de Dezembro reflete o impacto total da restrição de geo-blocking.
                     </p>
                     <ul class="list-disc list-inside text-brand-text-soft mt-3 space-y-1">
-                        <li>O **Investimento caiu para apenas 1,46€** e o volume de impressões foi nulo, provando que as campanhas estão ativamente bloqueadas.</li>
+                        <li>O Investimento caiu para apenas 1,46€ e o volume de impressões foi nulo, provando que as campanhas estão ativamente bloqueadas.</li>
                         <li>Oportunidade perdida: Este bloqueio impediu a conta de explorar o período sazonal de alta no final do ano.</li>
                         <li class="font-bold text-brand-text">A retoma do investimento só é possível após a correção, por parte do Alfa.bet, do acesso ao site para o bot do Google.</li>
                     </ul>
@@ -396,34 +396,19 @@
             </div>
         </section>
         
-        <section class="max-w-4xl mx-auto bg-brand-card p-8 rounded-lg shadow-2xl mb-16 border-t-8 border-brand-accent">
-            <h2 class="text-3xl font-bold mb-6 text-center">Conclusão e Próximos Passos</h2>
-            <div class="space-y-4 text-brand-text-soft text-lg">
-                <p>
-                    O mês de Novembro confirmou que as nossas otimizações atingiram a **rentabilidade da conta**, com o CPP a estabilizar em 22,63€, validando o trabalho de refinação de keywords e do funil de conversão.
-                </p>
-                <p class="font-semibold text-red-400">
-                    Contudo, desde 18 de Novembro, as campanhas foram **bloqueadas por *geo-blocking*** devido a um problema de acesso ao site pelo bot do Google. Esta situação impediu a escalabilidade rentável planeada para o período sazonal de Dezembro.
-                </p>
-                <p class="font-semibold text-brand-text border-l-4 border-brand-accent pl-3">
-                    **Próximo Passo Urgente:** O investimento só poderá ser retomado após o Alfa.bet garantir o acesso irrestrito ao site por parte do Google. Assim que o problema for corrigido, o plano é retomar a estratégia de Dezembro: **Escalabilidade Rentável** com foco na maximização do lucro.
-                </p>
-            </div>
-        </section>
-
         <section class="max-w-4xl mx-auto">
              <div class="bg-red-900/10 border-l-4 border-red-500 text-brand-text p-6 rounded-lg shadow-lg">
                 <h3 class="text-2xl font-bold mb-4 text-red-400">🚨 Bloqueio Crítico (Prioridade Máxima)</h3>
                 <p class="mb-4">
-                    **Aguardamos a correção imediata do problema de *Geo-Blocking*** no website da Alfa.bet para permitir o acesso do Google Bot e desbloquear os anúncios.
+                    Aguardamos a correção do problema de Geo-Blocking no website da Alfa.bet para permitir o acesso do Google Bot e os anúncios serem desbloqueados.
                 </p>
                 <h3 class="text-2xl font-bold mb-4 text-brand-accent">Outros Pedidos Pendentes (Aguardamos Alfa.bet)</h3>
                 <ul class="list-disc list-inside space-y-2 text-brand-text-soft">
-                    <li>Ofertas que serão feitas nos próximos meses (estamos sem ofertas neste momento)</li>
+                    <li>Ofertas que serão feitas nos próximos meses</li>
                     <li>Calendário dos próximos jogos</li>
-                    <li>Importação Offline de FTDs (ainda não foi falado com eles)</li>
-                    <li>Página de promoções atualizada no site (sugestão minha)</li>
-                    <li>Popup de registo e início de sessão no site (sugestão minha)</li>
+                    <li>Importação Offline de FTDs</li>
+                    <li>Página de promoções atualizada no site</li>
+                    <li>Popup de registo e início de sessão no site</li>
                 </ul>
             </div>
         </section>
