--- a/index.html
+++ b/index.html
@@ -116,25 +116,21 @@
             <div class="bg-brand-card p-6 rounded-xl shadow-lg border-t-4 border-brand-accent/50 text-center">
                 <p class="text-brand-text-soft text-sm uppercase tracking-wider font-semibold mb-2">Investimento Total</p>
                 <p class="text-3xl font-bold text-brand-accent">€112,015.38</p> 
-                <p class="text-xs text-brand-text-soft mt-1">Acumulado Março a Dezembro</p>
             </div>
             
             <div class="bg-brand-card p-6 rounded-xl shadow-lg border-t-4 border-brand-accent/50 text-center">
                 <p class="text-brand-text-soft text-sm uppercase tracking-wider font-semibold mb-2">Signups (Leads) Total</p>
                 <p class="text-3xl font-bold text-brand-text">10,658</p> 
-                <p class="text-xs text-brand-text-soft mt-1">Volume bruto de registos</p>
             </div>
             
             <div class="bg-brand-card p-6 rounded-xl shadow-lg border-t-4 border-brand-accent/50 text-center">
                 <p class="text-brand-text-soft text-sm uppercase tracking-wider font-semibold mb-2">FTDs (Primeiros Depósitos) Total</p>
                 <p class="text-3xl font-bold text-brand-text">1,786</p>
-                <p class="text-xs text-brand-text-soft mt-1">Indicador de aquisição</p>
             </div>
 
             <div class="bg-brand-card p-6 rounded-xl shadow-lg border-t-4 border-red-500 text-center">
                 <p class="text-brand-text-soft text-sm uppercase tracking-wider font-semibold mb-2">CPP Médio Acumulado</p>
                 <p class="text-3xl font-bold text-red-400">€62.72</p>
-                <p class="text-xs text-brand-danger font-bold mt-1">Objetivo: €13.00</p>
             </div>
 
         </section>
@@ -211,7 +207,7 @@
                     </p>
                 </div>
 
-                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
+                                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Maio : A Primeira Grande Otimização</h3>
                     <p class="text-brand-text-soft">
@@ -224,7 +220,7 @@
                     </ul>
                 </div>
 
-                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
+                                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Junho : Escalabilidade Máxima</h3>
                     <p class="text-brand-text-soft">
@@ -232,7 +228,7 @@
                     </p>
                 </div>
 
-                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
+                                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Julho - Agosto : Controlo de Custos e Eficiência</h3>
                     <p class="text-brand-text-soft">
@@ -240,7 +236,7 @@
                     </p>
                 </div>
 
-                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
+                                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Setembro : A Revolução no Processo de Registo</h3>
                     <p class="text-brand-text-soft">
@@ -253,7 +249,7 @@
                     </ul>
                 </div>
 
-                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
+                                <div class="mb-10 ml-8 pl-6 relative p-4 bg-brand-card/20 rounded-lg">
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Outubro : A Nova Estratégia de Rentabilidade</h3>
                     <p class="text-brand-text-soft">
@@ -268,52 +264,36 @@
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Novembro : Prova de Rentabilidade e Início do Bloqueio</h3>
                     <p class="text-brand-text-soft">
-                        Novembro provou a **rentabilidade da estratégia** implementada: o CPP mensal consolidado foi de **€22,63**. Este valor foi alcançado apesar da crise de volume que começou a meio do mês.
+                        Novembro não começou da melhor forma em termos de volume, devido à estratégia agressiva de redução de investimento de Outubro. No entanto, o problema técnico de geo-blocking a partir de 18 de Novembro, que restringiu a maior parte do investimento, resultou numa acumulação de atribuições de *late FTDs*. Como consequência, o CPP mensal consolidou-se em **€22,63**, representando uma melhoria de cerca de **3,5%** face a Outubro (€23,41) e comprovando a rentabilidade da conta.
                     </p>
-                    <ul class="list-disc list-inside text-brand-text-soft mt-3 space-y-1">
-                        <li>**Performance até 17/11:** Nos primeiros 17 dias, a performance estava excelente, com o CPP a rondar os €25.30 e a Taxa de Conversão mantendo-se acima dos 50%. A conta estava em crescimento rentável.</li>
-                        <li class="font-semibold text-red-400">**Bloqueio a 18/11:** A partir do dia 18, houve uma queda abrupta de mais de 90% no volume diário de impressões e cliques. Esta quebra foi causada por uma **restrição de *geo-blocking*** que impediu o Google Bot de aceder ao site, bloqueando os anúncios.</li>
+                                        <ul class="list-disc list-inside text-brand-text-soft mt-3 space-y-1">
+                        <li>A partir do dia 18, houve uma queda abrupta de mais de 90% no volume diário de impressões e cliques. Esta quebra foi causada por uma restrição de geo-blocking que impediu o Google Bot de aceder ao site, bloqueando os anúncios.</li>
                         <li>O investimento mensal total foi limitado a apenas **€2.441,47**, provando que o problema foi técnico e não estratégico.</li>
+                        <li class="font-bold text-brand-text">A retoma do investimento só é possível após a correção, por parte do Alfa.bet, do acesso ao site para o bot do Google.</li>
                     </ul>
                 </div>
 
-                <div class="mb-10 ml-8 pl-6 relative p-4 bg-red-900/20 rounded-lg border-2 border-red-500">
+                                <div class="mb-10 ml-8 pl-6 relative p-4 bg-red-900/20 rounded-lg border-2 border-red-500">
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-red-500 ring-4 ring-red-300"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-red-400">Dezembro (1ª Quinzena) : Bloqueio Total de Anúncios</h3>
                     <p class="text-brand-text-soft">
-                        A primeira quinzena de Dezembro reflete o impacto total da restrição de *geo-blocking*.
+                        A primeira quinzena de Dezembro reflete o impacto total da restrição de geo-blocking.
                     </p>
                     <ul class="list-disc list-inside text-brand-text-soft mt-3 space-y-1">
                         <li>O Investimento caiu para apenas 1,46€ e o volume de impressões foi nulo, provando que as campanhas estão ativamente bloqueadas.</li>
-                        <li>Oportunidade perdida: Este bloqueio impediu a conta de explorar o período sazonal de alta no final do ano.</li>
                         <li class="font-bold text-brand-text">A retoma do investimento só é possível após a correção, por parte do Alfa.bet, do acesso ao site para o bot do Google.</li>
                     </ul>
                 </div>
             </div>
         </section>
        
-        <section class="max-w-4xl mx-auto bg-brand-card p-8 rounded-lg shadow-2xl mb-16 border-t-8 border-brand-accent">
-            <h2 class="text-3xl font-bold mb-6 text-center">Conclusão e Próximos Passos</h2>
-            <div class="space-y-4 text-brand-text-soft text-lg">
-                <p>
-                    A estratégia atingiu a **rentabilidade da conta** em Novembro, com o CPP a estabilizar em **€22,63** antes do problema técnico. O foco na qualidade do tráfego demonstrou ser o caminho correto.
-                </p>
-                <p class="font-semibold text-red-400">
-                    O principal desafio atual é o **bloqueio de *geo-blocking*** que suspendeu a operação desde 18 de Novembro. Esta é uma falha técnica no acesso do Google Bot que requer intervenção imediata do cliente para ser resolvida.
-                </p>
-                <p class="font-semibold text-brand-text border-l-4 border-brand-accent pl-3">
-                    **Próximo Passo Urgente:** É fundamental resolver o acesso ao website para o Google Bot. Assim que o problema for corrigido, o plano é retomar a **Escalabilidade Rentável** de Dezembro, aproveitando o CPP comprovadamente eficiente.
-                </p>
-            </div>
-        </section>
-
         <section class="max-w-4xl mx-auto">
              <div class="bg-red-900/10 border-l-4 border-red-500 text-brand-text p-6 rounded-lg shadow-lg">
                 <h3 class="text-2xl font-bold mb-4 text-red-400">🚨 Bloqueio Crítico (Prioridade Máxima)</h3>
                 <p class="mb-4">
-                    **Aguardamos a correção do problema de *Geo-Blocking*** no website da Alfa.bet para permitir o acesso do Google Bot e os anúncios serem desbloqueados.
+                    Aguardamos a correção do problema de Geo-Blocking no website da Alfa.bet para permitir o acesso do Google Bot e os anúncios serem desbloqueados.
                 </p>
-                <h3 class="text-2xl font-bold mb-4 text-brand-accent">Outros Pedidos Pendentes (Aguardamos Alfa.bet)</h3>
+                <h3 class="text-2xl font-bold mb-4 text-brand-accent">Outros Pedidos Pendentes</h3>
                 <ul class="list-disc list-inside space-y-2 text-brand-text-soft">
                     <li>Ofertas que serão feitas nos próximos meses</li>
                     <li>Calendário dos próximos jogos</li>
