--- a/index.html
+++ b/index.html
@@ -264,12 +264,11 @@
                     <span class="absolute -left-[11px] top-1 flex h-5 w-5 items-center justify-center rounded-full bg-brand-accent ring-4 ring-brand-dark"></span>
                     <h3 class="text-2xl font-semibold mb-2 text-brand-accent">Novembro : Prova de Rentabilidade e Início do Bloqueio</h3>
                     <p class="text-brand-text-soft">
-                        Novembro não começou da melhor forma em termos de volume, devido à estratégia agressiva de redução de investimento de Outubro. No entanto, o problema técnico de geo-blocking a partir de 18 de Novembro, que restringiu a maior parte do investimento, resultou numa acumulação de atribuições de *late FTDs*. Como consequência, o CPP mensal consolidou-se em **€22,63**, representando uma melhoria de cerca de **3,5%** face a Outubro (€23,41) e comprovando a rentabilidade da conta.
+                        Novembro não começou da melhor forma em termos de volume, devido à estratégia agressiva de redução de investimento de Outubro. No entanto, o problema técnico de geo-blocking a partir de 18 de Novembro, que restringiu a maior parte do investimento, resultou numa acumulação de atribuições de late FTDs. Como consequência, o CPP mensal consolidou-se em €22,63, representando uma melhoria de cerca de 3,5% face a Outubro (€23,41).
                     </p>
                                         <ul class="list-disc list-inside text-brand-text-soft mt-3 space-y-1">
                         <li>A partir do dia 18, houve uma queda abrupta de mais de 90% no volume diário de impressões e cliques. Esta quebra foi causada por uma restrição de geo-blocking que impediu o Google Bot de aceder ao site, bloqueando os anúncios.</li>
-                        <li>O investimento mensal total foi limitado a apenas **€2.441,47**, provando que o problema foi técnico e não estratégico.</li>
-                        <li class="font-bold text-brand-text">A retoma do investimento só é possível após a correção, por parte do Alfa.bet, do acesso ao site para o bot do Google.</li>
+                        <li>O investimento mensal total foi limitado a apenas €2.441,47, provando que o problema foi técnico e não estratégico.</li>
                     </ul>
                 </div>
 
@@ -281,7 +280,7 @@
                     </p>
                     <ul class="list-disc list-inside text-brand-text-soft mt-3 space-y-1">
                         <li>O Investimento caiu para apenas 1,46€ e o volume de impressões foi nulo, provando que as campanhas estão ativamente bloqueadas.</li>
-                        <li class="font-bold text-brand-text">A retoma do investimento só é possível após a correção, por parte do Alfa.bet, do acesso ao site para o bot do Google.</li>
+                        <li class="font-bold text-brand-text">A retoma do investimento só é possível após a correção, por parte da Alfa.bet, dando acesso total ao bot do Google.</li>
                     </ul>
                 </div>
             </div>
