--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@
                                 Novembro não começou da melhor forma em termos de volume, devido à estratégia agressiva de redução de investimento de Outubro. No entanto, o problema técnico de geo-blocking a partir de 18 de Novembro, que restringiu a maior parte do investimento, resultou numa acumulação de atribuições de late FTDs. Como consequência, o CPP mensal consolidou-se em €22,63, representando uma melhoria de cerca de 3,5% face a Outubro (€23,41).
                             </p>
                             <ul class="list-disc list-inside text-brand-text-soft mt-3 space-y-1">
-                                <li>A partir do dia 18, houve uma queda abrupta de mais de 90% no volume diário de impressões e cliques. Esta quebra foi causada por uma restrição de geo-blocking que impediu o Google Bot de aceder ao site, bloqueando os anúncios.</li>
-                                <li>O investimento mensal total foi limitado a apenas €2.441,47, provando que o problema foi técnico e não estratégico.</li>
+                                <li>A partir do dia 18, houve uma queda abrupta de mais de 90% no volume diário de impressões e cliques. Esta quebra foi causada por uma restrição de geo-blocking que impediu o Google Bot de aceder ao site, bloqueando todos os anúncios.</li>
+                                <li>O investimento mensal total foi limitado a apenas €2.441,47.</li>
                             </ul>
                         </div>
                     </div>
