--- a/index.html
+++ b/index.html
@@ -153,58 +153,155 @@
         <section id="detalhes-mensais" class="mb-16">
             <h2 class="text-3xl font-bold mb-6 text-center text-brand-accent">📊 Resultados Detalhados (Mensal)</h2>
             <div class="table-wrapper overflow-x-auto rounded-xl">
-                <table class="w-full min-w-[1400px] data-table">
-                    <thead>
-                        <tr>
-                            <th>Mês</th>
-                            <th>Investimento</th>
-                            <th>Impressões</th>
-                            <th>Cliques</th>
-                            <th>CTR</th>
-                            <th>Signups (Leads)</th>
-                            <th>Custo por Lead (CPL)</th>
-                            <th>FTDs</th>
-                            <th>Custo por Aquisição (CPP/CPA)</th>
-                            <th>Taxa Conversão (Signup - FTD)</th>
-                        </tr>
-                    </thead>
-                    <tbody class="text-brand-text-soft">
-                        <tr> <th scope="row">Março</th> <td>€18,416.80</td> <td>370,683</td> <td>14,813</td> <td>4.00%</td> <td>1,709</td> <td>€10.78</td> <td>114</td> <td>€161.55</td> <td>6.67%</td> </tr>
-                        <tr> 
-                            <th scope="row">Abril</th> <td>€11,630.73</td> <td>174,759</td> <td>11,124</td> <td>6.37%</td> <td>2,460</td> <td>€4.73</td> <td>116</td> <td>€100.26</td> <td>4.72%</td> 
-                        </tr>
-                        <tr> 
-                            <th scope="row">Maio</th> <td>€8,519.99</td> <td>277,430</td> <td>6,333</td> <td>2.28%</td> <td>848</td> <td>€10.05</td> <td>199</td> <td>€42.81</td> <td>23.47%</td> 
-                        </tr>
-                        <tr> <th scope="row">Junho</th> <td>€29,425.83</td> <td>1,233,510</td> <td>25,883</td> <td>2.10%</td> <td>2,272</td> <td>€12.95</td> <td>609</td> <td>€48.32</td> <td>26.80%</td> </tr>
-                        <tr> <th scope="row">Julho</th> <td>€21,244.51</td> <td>856,613</td> <td>18,718</td> <td>2.19%</td> <td>1,748</td> <td>€12.15</td> <td>333</td> <td>€63.80</td> <td>19.05%</td> </tr>
-                        <tr> <th scope="row">Agosto</th> <td>€9,836.32</td> <td>461,416</td> <td>12,587</td> <td>2.73%</td> <td>870</td> <td>€11.31</td> <td>182</td> <td>€54.05</td> <td>20.92%</td> </tr>
-                        <tr> 
-                            <th scope="row">Setembro</th> 
-                            <td>€6,224.32</td> <td>181,903</td> <td>6,188</td> <td>3.40%</td> <td>423</td> <td>€14.71</td> <td>246</td> <td>€25.30</td> <td>58.16%</td> 
-                        </tr>
-                        <tr> 
-                            <th scope="row">Outubro</th> 
-                            <td>€4,424.35</td> <td>124,690</td> <td>6,292</td> <td>5.05%</td> <td>359</td> <td>€12.32</td> <td>189</td> <td>€23.41</td> <td>52.65%</td> 
-                        </tr>
-                        <tr> 
-                            <th scope="row">Novembro</th> 
-                            <td>€2,441.47</td> <td>49,485</td> <td>3,063</td> <td>6.19%</td> <td>206</td> <td>€11.86</td> <td>108</td> <td>€22.63</td> <td>52.43%</td> 
-                        </tr>
-                        <tr class="row-blocked">
-                            <th scope="row" class="text-red-300">Dezembro</th>
-                            <td>€76.60</td>
-                            <td>1081</td>
-                            <td>71</td>
-                            <td>6.57%</td>
-                            <td>12</td>
-                            <td>€6.38</td>
-                            <td>26</td>
-                            <td>€2.95</td>
-                            <td>216,7%</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <table class="w-full min-w-[1500px] data-table">
+    <thead>
+        <tr>
+            <th>Mês</th>
+            <th>Investimento</th>
+            <th>Impressões</th>
+            <th>Cliques</th>
+            <th>CTR</th>
+            <th>Signups (Leads)</th>
+            <th>Custo por Lead (CPL)</th>
+            <th>FTDs</th>
+            <th>Custo por Aquisição (CPP/CPA)</th>
+            <th>Taxa Conversão (Signup - FTD)</th>
+            <th>Comissão</th> <!-- NOVA COLUNA -->
+        </tr>
+    </thead>
+    <tbody class="text-brand-text-soft">
+        <tr>
+            <th scope="row">Março</th>
+            <td>€18,416.80</td>
+            <td>370,683</td>
+            <td>14,813</td>
+            <td>4.00%</td>
+            <td>1,709</td>
+            <td>€10.78</td>
+            <td>114</td>
+            <td>€161.55</td>
+            <td>6.67%</td>
+            <td>—</td>
+        </tr>
+        <tr>
+            <th scope="row">Abril</th>
+            <td>€11,630.73</td>
+            <td>174,759</td>
+            <td>11,124</td>
+            <td>6.37%</td>
+            <td>2,460</td>
+            <td>€4.73</td>
+            <td>116</td>
+            <td>€100.26</td>
+            <td>4.72%</td>
+            <td>€270.55</td>
+        </tr>
+        <tr>
+            <th scope="row">Maio</th>
+            <td>€8,519.99</td>
+            <td>277,430</td>
+            <td>6,333</td>
+            <td>2.28%</td>
+            <td>848</td>
+            <td>€10.05</td>
+            <td>199</td>
+            <td>€42.81</td>
+            <td>23.47%</td>
+            <td>€429.30</td>
+        </tr>
+        <tr>
+            <th scope="row">Junho</th>
+            <td>€29,425.83</td>
+            <td>1,233,510</td>
+            <td>25,883</td>
+            <td>2.10%</td>
+            <td>2,272</td>
+            <td>€12.95</td>
+            <td>609</td>
+            <td>€48.32</td>
+            <td>26.80%</td>
+            <td>€616.96</td>
+        </tr>
+        <tr>
+            <th scope="row">Julho</th>
+            <td>€21,244.51</td>
+            <td>856,613</td>
+            <td>18,718</td>
+            <td>2.19%</td>
+            <td>1,748</td>
+            <td>€12.15</td>
+            <td>333</td>
+            <td>€63.80</td>
+            <td>19.05%</td>
+            <td>€1,889.59</td>
+        </tr>
+        <tr>
+            <th scope="row">Agosto</th>
+            <td>€9,836.32</td>
+            <td>461,416</td>
+            <td>12,587</td>
+            <td>2.73%</td>
+            <td>870</td>
+            <td>€11.31</td>
+            <td>182</td>
+            <td>€54.05</td>
+            <td>20.92%</td>
+            <td>€3,466.58</td>
+        </tr>
+        <tr>
+            <th scope="row">Setembro</th>
+            <td>€6,224.32</td>
+            <td>181,903</td>
+            <td>6,188</td>
+            <td>3.40%</td>
+            <td>423</td>
+            <td>€14.71</td>
+            <td>246</td>
+            <td>€25.30</td>
+            <td>58.16%</td>
+            <td>€1,963.36</td>
+        </tr>
+        <tr>
+            <th scope="row">Outubro</th>
+            <td>€4,424.35</td>
+            <td>124,690</td>
+            <td>6,292</td>
+            <td>5.05%</td>
+            <td>359</td>
+            <td>€12.32</td>
+            <td>189</td>
+            <td>€23.41</td>
+            <td>52.65%</td>
+            <td>€926.48</td>
+        </tr>
+        <tr>
+            <th scope="row">Novembro</th>
+            <td>€2,441.47</td>
+            <td>49,485</td>
+            <td>3,063</td>
+            <td>6.19%</td>
+            <td>206</td>
+            <td>€11.86</td>
+            <td>108</td>
+            <td>€22.63</td>
+            <td>52.43%</td>
+            <td>€1,140.77</td>
+        </tr>
+        <tr class="row-blocked">
+            <th scope="row" class="text-red-300">Dezembro</th>
+            <td>€76.60</td>
+            <td>1,081</td>
+            <td>71</td>
+            <td>6.57%</td>
+            <td>12</td>
+            <td>€6.38</td>
+            <td>26</td>
+            <td>€2.95</td>
+            <td>216,7%</td>
+            <td>€1,219.26</td>
+        </tr>
+    </tbody>
+</table>
             </div>
         </section>
         
