--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
         tbody tr:nth-child(even) { background-color: #04043a; }
         tbody tr:hover { background-color: #3e4a5f; cursor: pointer; }
         td, th {
-            padding: 1rem 1.5rem;
+            font-size: 0.75rem;
+            padding: 0.5rem 0.75rem;
             text-align: left;
             border-bottom: 1px solid #3e4a5f;
         }
@@ -153,7 +154,7 @@
         <section id="detalhes-mensais" class="mb-16">
             <h2 class="text-3xl font-bold mb-6 text-center text-brand-accent">📊 Resultados Detalhados (Mensal)</h2>
             <div class="table-wrapper overflow-x-auto rounded-xl">
-                <table class="w-full min-w-[1500px] data-table">
+                <table class="w-full data-table">
     <thead>
         <tr>
             <th>Mês</th>
@@ -161,11 +162,11 @@
             <th>Impressões</th>
             <th>Cliques</th>
             <th>CTR</th>
-            <th>Signups (Leads)</th>
-            <th>Custo por Lead (CPL)</th>
+            <th>Signups</th>
+            <th>CPL</th>
             <th>FTDs</th>
-            <th>Custo por Aquisição (CPP/CPA)</th>
-            <th>Taxa Conversão (Signup - FTD)</th>
+            <th>CPA</th>
+            <th>Tx. Conv.<br>(Signup - FTD)</th>
             <th>Comissão</th> <!-- NOVA COLUNA -->
         </tr>
     </thead>
